# niffler-py

./: .gitignore  README.md  build.gradle  docker-compose.yml  docker.properties  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  flow.yml  test.yml
niffler-gateway/src/main/java/guru/qa/niffler/controller/v2/: FriendsV2Controller.java  SpendV2Controller.java
python_test/: .env.sample  marks.py  pyproject.toml  report_helper.py  requirements.txt
python_test/clients/: kafka_client.py  spends_client.py
python_test/data_helpers/: api_helpers.py
python_test/databases/: spend_db.py  userdata_bd.py
python_test/fixture/: client_fixture.py  page_fixture.py
python_test/internal/grpc/interceptors/: allure.py  logging.py
python_test/internal/pb/: niffler_currency_pb2.py  niffler_currency_pb2.pyi  niffler_currency_pb2_pbreflect.py
python_test/internal/pb/google/protobuf/: empty_pb2.py  empty_pb2.pyi  timestamp_pb2.py  timestamp_pb2.pyi
python_test/internal/pb/grpc/health/v1/: health_pb2.py  health_pb2.pyi.py  health_pb2_pbreflect.py
python_test/locators/: __init__.py  base_page_locators.py  login_page_locatorc.py  login_page_locators.py  profile_page_locators.py  register_page_locators.py  spending_page_locators.py
python_test/model/: BasePage.py  LoginPage.py  ProfilePage.py  RegisterPage.py  SpendingPage.py  __init__.py  config.py
python_test/model/db/: spend.py  user.py
python_test/protos/: niffler_currency.proto
python_test/protos/google/protobuf/: empty.proto  timestamp.proto
python_test/protos/grpc/health/v1/: health.proto
python_test/protos/grpc/reflection/v1alpha/: reflection.proto
python_test/resources/templates/: http-colored-request.ftl  read_templates.py
python_test/resources/templates/xml/: accept_invitation.xml  current_user.xml  decline_invitation.xml  friends.xml  remove_friend.xml  send_invitation.xml  update_user.xml
python_test/tests/: conftest.py  pytest.ini  test_api.py  test_app.py  test_auth.py  test_grpc.py  test_kafka.py  test_profile.py  test_soap.py
python_test/utils/: allure_helpers.py  sessions.py  waiters.py  xml_check.py
