[project]
name = "niffler-py"
version = "0.1.0"
description = ""
authors = [
    {name = "valgoncharov",email = "99090572+valgoncharov@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "playwright (>=1.52.0,<2.0.0)",
    "confluent-kafka (>=2.11.0,<3.0.0)",
    "allure-pytest (>=2.14.3,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "faker (>=37.4.2,<38.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "logging (>=0.4.9.6,<0.5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
